--- a/kafka/kafka-producer/pom.xml
+++ b/kafka/kafka-producer/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
 
     </dependencies>
 
